<resources>
    <string name="app_name">MTAA</string>
    <string name="vytvorit_novy_ucet">Vytvoriť nový účet</string>
    <string name="email">Email</string>
    <string name="pou_vate_sk_meno">Používateľské meno</string>
    <string name="meno">Meno</string>
    <string name="priezvisko">Priezvisko</string>
    <string name="potvrdi_heslo">Potvrdiť heslo</string>
    <string name="heslo">Heslo</string>
    <string name="zdajte_pou_vate_sk_meno">Zdajte používateľské meno</string>
    <string name="zadajte_meno">Zadajte meno</string>
    <string name="zadajte_priezvisko">Zadajte priezvisko</string>
    <string name="zadajte_email">Zadajte email</string>
    <string name="zadajte_heslo">Zadajte heslo</string>
    <string name="registrova">Registrovať</string>
    <string name="zabudli_ste_heslo">Zabudli ste heslo?</string>
    <string name="prihlasit">Prihlásiť</string>
    <string name="registrácia_tu">Registrovať tu.</string>
    <string name="uname">Užívateľské meno</string>
    <string name="obnovenie_hesla">Obnovenie hesla</string>
    <string name="obnovi">Obnoviť</string>
    <string name="obnovenie_emailu">Obnovenie emailu</string>
    <string name="after_reg_title">Ďakujeme \n za vašu \n registráciu</string>
    <string name="logo">LOGO</string>
    <string name="cart">košík</string>
    <string name="profil">profil</string>
    <string name="zabudli_ste_email">"Zabudli ste email ? "</string>
    <string name="admin">Administrátor</string>
    <string name="addFood">Pridaj Jedlo</string>
    <string name="addRestaurant">Pridaj Reštauráciu</string>
    <string name="deleteRestaurant">Zmaž Reštauráciu</string>
    <string name="deleteFood">Zmaž jedlo</string>
    <string name="showRestaurant">Zobraz reštauráciu</string>
    <string name="create_restaurant">Vytvorenie reštaurácie</string>
    <string name="mesto">Mesto</string>
    <string name="price_del">Cena doručenia</string>
    <string name="price_del_euros">Cena doručenia jedla v €</string>
    <string name="time_del">Čas doručenia</string>
    <string name="time_del_min">čas doručenia v minútach</string>
    <string name="price_min">Minimálna cena obj.</string>
    <string name="price_del_euros_min">MInimálna cena objednávky</string>
    <string name="openFrom">Otvorené od</string>
    <string name="openTo">Otvorené do</string>
    <string name="create_food">Pridať jedlo</string>
    <string name="create_food_2">Pridanie jedla</string>
    <string name="price_food">Cena</string>
    <string name="ingredients">Ingrediencie</string>
    <string name="type">Typ</string>
    <string name="back">Spat</string>
    <string name="min_n_kup">Min. nákup:</string>
    <string name="resturant_photo">Foto:</string>
    <string name="delivery_time">Čas doručenia:</string>
    <string name="delivery_price">Cena doručenia:</string>
    <string name="otvoren_od">Otvorené od:</string>
    <string name="rating">Hodnotenie</string>
    <string name="cena">Cena:</string>
    <string name="vaha">Váha:</string>
    <string name="pridat">Pridať</string>
    <string name="zmena_emailu">Zmena emailu</string>
    <string name="zmena_hesla">Zmena hesla</string>
    <string name="history">História objednávok:</string>
    <string name="ingredients_desc">Igrediencie jedla</string>
    <string name="weight">Váha</string>
    <string name="weight_of_food">Zadajte váhu porcie v gramoch</string>
    <string name="id_to_delete">W/e</string>
    <string name="id_delete_food">w/e</string>
    <string name="zadajte_ingrediencie_jedla">Zadajte ingrediencie jedla</string>
    <string name="zadajte_v_hu_v_gramoch">Zadajte váhu v gramoch</string>
    <string name="v_ha">Váha</string>
    <string name="objedna">Objednať</string>
    <string name="spolu">Spolu:</string>
    <string name="odobra">Odobrať</string>
    <string name="re_tika">Reštika</string>
    <string name="detail">Detail</string>
    <string name="odstr_ni">Odstrániť</string>
</resources>
