<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createFood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".CreateFood"
    android:background="@color/lightBlue">

    <TextView
        android:id="@+id/title"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/create_food_2"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="373dp"
        android:layout_height="351dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/meno"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/užívateľ"
                tools:layout_editor_absoluteY="195dp" />

            <EditText
                android:id="@+id/enterName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/zadajte_meno"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/price_food"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/užívateľ"
                tools:layout_editor_absoluteY="195dp" />

            <EditText
                android:id="@+id/enterPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/price_del_euros"
                android:inputType="number"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/ingredients"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/užívateľ"
                tools:layout_editor_absoluteY="195dp" />

            <EditText
                android:id="@+id/enterIngr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/zadajte_ingrediencie_jedla"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/weight"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/v_ha"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/užívateľ"
                tools:layout_editor_absoluteY="195dp" />

            <EditText
                android:id="@+id/enterWeight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:hint="@string/zadajte_v_hu_v_gramoch"
                android:inputType="number"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type"
                android:textSize="15sp"
                android:gravity="center|left"
                app:layout_constraintStart_toStartOf="@+id/užívateľ"
                tools:layout_editor_absoluteY="195dp" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="260dp"
                android:layout_height="match_parent"
                android:textSize="20sp"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/logo"
                android:layout_width="128dp"
                android:layout_height="80dp"
                android:gravity="center|right"
                android:text="@string/logo"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/užívateľ"
                tools:layout_editor_absoluteY="195dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                app:srcCompat="@drawable/addphoto" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/createFoodBtn"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@color/peach"
        android:text="@string/create_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>