<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resetPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16sp"
    tools:context=".ResetPassword">


    <TextView
        android:id="@+id/title"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/obnovenie_hesla"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="364dp"
        android:layout_height="207dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/userName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/pou_vate_sk_meno"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="125dp" />

            <EditText
                android:id="@+id/enterUserName"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="2.5"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/zdajte_pou_vate_sk_meno"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/priezvisko"
                tools:layout_editor_absoluteY="289dp" />

            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/zadajte_email"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/pwd"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/heslo"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/email"
                tools:layout_editor_absoluteY="339dp" />

            <EditText
                android:id="@+id/enterPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/zadajte_heslo"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/confirmPwd"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/potvrdi_heslo"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/heslo"
                tools:layout_editor_absoluteY="384dp" />

            <EditText
                android:id="@+id/enterConfirmPwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/zadajte_heslo"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgotEmailTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="#ff0000ff"
            android:textSize="15sp"
            android:text="@string/zabudli_ste_email"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>



    <Button
        android:id="@+id/resetBtn"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/obnovi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>