<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wrapper_admin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/rest_photo_admin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/spinner_background"
        android:contentDescription="@string/resturant_photo"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp">

        <TextView
            android:id="@+id/rest_title_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/re_tika"
            android:textSize="30sp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginRight="20dp"
                android:background="@color/peach"
                android:gravity="center"
                android:text="@string/detail"></Button>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:background="@color/red"
                android:gravity="center"
                android:text="@string/odstr_ni"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>